[package]
name = "tracing-mutex"
version = "0.3.0"
authors = ["Bert Peters <bert@bertptrs.nl>"]
edition = "2021"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/tracing-mutex"
categories = ["concurrency", "development-tools::debugging"]
keywords = ["mutex", "rwlock", "once", "thread"]
description = "Ensure deadlock-free mutexes by allocating in order, or else."
readme = "README.md"
repository = "https://github.com/bertptrs/tracing-mutex"
rust-version = "1.70"

[package.metadata.docs.rs]
# Build docs for all features so the documentation is more complete
all-features = true
# Set custom cfg so we can enable docs.rs magic
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
lock_api = { version = "0.4", optional = true }
parking_lot = { version = "0.12", optional = true }

[dev-dependencies]
criterion = "0.5"
rand = "0.8"

[[bench]]
name = "mutex"
harness = false

[[example]]
name = "drop_in_parking_lot"
required-features = ["parkinglot"]

[features]
default = ["backtraces"]
backtraces = []
experimental = []
# Feature names do not match crate names pending namespaced features.
lockapi = ["lock_api"]
parkinglot = ["parking_lot", "lockapi"]

[build-dependencies]
autocfg = "1.4.0"
