[package]
name = "tracing-mutex"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
categories = ["concurrency", "development-tools::debugging"]
keywords = ["mutex", "rwlock", "once", "thread"]
description = "Ensure deadlock-free mutexes by allocating in order, or else."
readme = "README.md"
repository = "https://github.com/bertptrs/tracing-mutex"
rust-version = "1.70"

[package.metadata.docs.rs]
# Build docs for all features so the documentation is more complete
all-features = true
# Set custom cfg so we can enable docs.rs magic
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
lock_api = { version = "0.4", optional = true }
parking_lot = { version = "0.12", optional = true }

[dev-dependencies]
criterion = "0.5"
rand = "0.8"

[[bench]]
name = "mutex"
harness = false

[[example]]
name = "drop_in_parking_lot"
required-features = ["parkinglot"]

[features]
default = ["backtraces"]
backtraces = []
experimental = []
lock_api = ["dep:lock_api"]
parking_lot = ["dep:parking_lot", "lock_api"]

# Deprecated feature names from when cargo couldn't distinguish between dep and feature
lockapi = ["dep:lock_api"]
parkinglot = ["dep:parking_lot", "lock_api"]

[build-dependencies]
autocfg = "1.4.0"
